# SDL

./: README.md
helloworld/: CMakeLists.txt  MySDL.cpp  MySDL.h  main.cpp
加载BMP图片和软拉伸/: MySDL.h  main.cpp
实现加载BMP图片和软拉伸/: CMakeLists.txt  MySDL.cpp
